<resources>
    <string name="app_name">Digital Velocity</string>

    <string name="menu_drawerlayout_hamburger_title">Navigation</string>

    <string name="actionbar_logo_contentdescription">Digital Velocity Logo</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="title_activity_agenda">Agenda</string>
    <string name="title_activity_notifications">Notifications</string>
    <string name="title_activity_sponsors">Sponsors</string>
    <string name="title_activity_contact">Contact</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_event_location">Location</string>
    <string name="title_activity_demo">Demo</string>
    <string name="title_activity_survey">Surveys</string>
    <string name="title_activity_survey_detail">Survey</string>
    <string name="menu_modal_close_title">Close</string>
    <string name="title_activity_email">EmailActivity</string>
    <string name="agenda_detail_menu_close_title">Close</string>

    <string name="email_input_hint">(email address)</string>
    <string name="email_label_text">Convention Sign in</string>
    <string name="email_button_enter_title">ENTER</string>
    <string name="email_prompt">Please enter your registered e-mail address.</string>
    <string name="email_malformed_input">I\'m sorry, I don\'t understand \"%1$s\"</string>

    <string name="drawerlayout_layout_button_settings_text">&#xf013;</string>
    <string name="drawerlayout_chat_unavailable">Chat is not available at this time</string>

    <string name="settings_email_label_text">@string/email_label_text</string>
    <string name="settings_email_input_hint">@string/email_input_hint</string>
    <string name="demo_trace_label_text">AudienceStream Trace</string>
    <string name="demo_trace_input_hint">(trace id)</string>

    <string name="item_sponsor_image_logo_content_description">Logo</string>
    <string name="item_agenda_image_logo_content_description">Logo</string>
    <string name="title_activity_sponsor_detail">SponsorDetailActivity</string>

    <string name="main_label_dv_text">DIGITAL <b>VELOCITY</b></string>
    <string name="main_label_year_text"><b>2015</b></string>
    <string name="main_label_slogan_text">The industry\&apos;s biggest gathering of experts on tag management and unified marketing</string>
    <string name="main_label_date_location_text">April 14&#8211;16, 2015 | The Hard Rock Hotel, San Diego</string>

    <string name="agenda_detail_image_content_description">Agenda Image</string>

    <string name="agenda_detail_toast_favorite">Added to Favorites</string>

    <string name="location_radio_map_text">Map</string>
    <string name="location_radio_layout_text">Layout</string>

    <string name="contact_facebook_text">&#xf09a;</string>
    <string name="contact_envelope_text">&#xf003;</string>
    <string name="contact_phone_text">&#xf095;</string>
    <string name="contact_phone_error">This device cannot make phone calls.</string>
    <string name="contact_twitter_text">&#xf099;</string>
    <string name="title_activity_debug">DebugActivity</string>
    <string name="action_settings">Settings</string>

    <string name="debug_option_beacon_events">Beacon Events</string>
    <string name="debug_option_files">Files</string>
    <string name="debug_option_sp">Shared Prefs</string>
    <string name="item_agenda_button_location_title">&#xf041;</string>
    <string name="email_image_logo_content_description">Digital Velocity Logo</string>

    <string-array name="debug_entries">
        <item>@string/debug_option_beacon_events</item>
        <item>@string/debug_option_files</item>
        <item>@string/debug_option_sp</item>
    </string-array>

    <string name="demo_account_label_text">Account</string>
    <string name="demo_account_input_hint">Account Name</string>
    <string name="demo_profile_label_text">Profile</string>
    <string name="demo_profile_input_hint">Profile Name</string>
    <string name="demo_env_label_text">Environment</string>
    <string name="demo_env_input_hint">Environment (dev/qa/prod)</string>
    <string name="demo_save_button_text">Save</string>
    <string name="demo_not_running_toast">Not running demo</string>
    <string name="demo_running_toast_format">Running demo %1$s</string>

    <string name="survey_square_unchecked">&#xf096;</string>
    <string name="survey_square_checked">&#xf046;</string>

    <string name="dialog_bluetooth_prompt_title">Please enable bluetooth</string>
    <string name="dialog_bluetooth_prompt_icon_text">&#xf1d1;</string>
    <string name="dialog_bluetooth_prompt_message">Enable this feature to gain access to exclusive experiences at Digital Velocity.</string>
    <string name="dialog_bluetooth_prompt_checkbox_text">Don\'t show this message again</string>
    <string name="dialog_bluetooth_prompt_negative">Not Now</string>
    <string name="dialog_bluetooth_prompt_positive">Enable Bluetooth</string>

    <string name="item_agenda_image_content_description">Event Image</string>
    <string name="notifications_label_none_text">No notifications yet</string>
    <string name="survey_label_none_text">No surveys yet</string>
    <string name="agenda_label_none_text">Nothing yet</string>
    <string name="location_label_none_text">No locations available</string>
    <string name="sponsors_label_none_text">No sponsors currently</string>
    <string name="settings_image_background_content_description">TMU Class</string>
    <string name="sponsor_click_error_no_url">URL Not available for this sponsor.</string>
    <string name="settings_usage_label_text">Send app usage data</string>
    <string name="favorites_selected">&#xf005;</string>
    <string name="favorites_unselected">&#xf006;</string>
    <string name="menu_drawerlayout_filter_title">Filter</string>
    <string name="menu_filter_agenda_favorite_title">Favorites</string>
    <string name="item_agenda_label_favorite_contentDescription">Favorite Indicator</string>
    <string name="title_activity_snowshoe">SnowshoeActivity</string>
    <string name="snowshoe_label_error_text">Please connect to the internet</string>
    <string name="agenda_label_nofavs_text">No Favorites</string>
    <string name="title_activity_chat_load">ChatLoadActivity</string>
    <string name="snowshoe_label_loading_text">Loading Passport View</string>
    <string name="actionbar_hamburger_contentDescription">Navigation</string>
    <string name="actionbar_imageview_favorites_contentDescription">Favorites Toggle</string>
    <string name="item_sponsor_button_demo_text">DEMO</string>
    <string name="item_surveydetail_submit_text">SUBMIT</string>
    <string name="surveydetail_incomplete">Please answer all questions</string>
    <string name="surveydetail_already_completed">This survey has already been completed</string>
    <string name="surveydetail_completed">Survey complete!</string>
    <string name="contact_no_phone">Sorry, phone is not available at this time</string>
    <string name="contact_no_twitter">Sorry, twitter link is not available at this time</string>
    <string name="contact_no_facebook">Sorry, facebook link is not available at this time</string>
    <string name="contact_no_email">Sorry, e-mail contact info is not available at this time</string>
    <string name="fa_circle">&#xf111;</string>
    <string name="fa_circle_o">&#xf10c;</string>
    <string name="fa_dot_circle_o">&#xf192;</string>
    <string name="demo_trace_button_info_text">&#xf059;</string>
    <string name="title_activity_permission">PermissionActivity</string>


</resources>
