<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <com.tealium.digitalvelocity.view.FontAwesomeView
        android:id="@+id/dialog_bluetooth_prompt_icon"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColor="#000"
        android:layout_margin="5dp"
        android:text="@string/dialog_bluetooth_prompt_icon_text" />

    <TextView
        android:id="@+id/dialog_bluetooth_prompt_label_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="#000"
        android:layout_toRightOf="@id/dialog_bluetooth_prompt_icon"
        android:layout_toEndOf="@id/dialog_bluetooth_prompt_icon"
        android:text="@string/dialog_bluetooth_prompt_message" />

    <CheckBox
        android:id="@+id/dialog_bluetooth_prompt_checkbox"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="start|center_vertical"
        android:textSize="14sp"
        android:textColor="#555"
        android:layout_below="@id/dialog_bluetooth_prompt_label_message"
        android:text="@string/dialog_bluetooth_prompt_checkbox_text" />

</RelativeLayout>
