<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    tools:context="com.tealium.digitalvelocity.SettingsActivity">

    <com.tealium.digitalvelocity.view.DVBackgroundView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        custom:src="@mipmap/trainingphoto" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="30dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/settings_email_label"
            style="@style/label"
            android:layout_marginBottom="5dp"
            android:text="@string/settings_email_label_text" />

        <EditText
            android:id="@+id/settings_email_input"
            style="@style/input"
            android:layout_marginBottom="10dp"
            android:hint="@string/settings_email_input_hint"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/settings_usage_label"
                style="@style/label"
                android:layout_gravity="start"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:text="@string/settings_usage_label_text" />

            <Switch
                android:id="@+id/settings_usage_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:layout_gravity="end" />

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
