<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tealium.digitalvelocity.LocationActivity">

    <RadioGroup
        android:id="@+id/location_radiogroup_categories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/location_radio_category_map"
            style="@style/location_radio"
            android:checked="true"
            android:text="@string/location_radio_map_text" />

        <RadioButton
            android:id="@+id/location_radio_category_layout"
            style="@style/location_radio"
            android:text="@string/location_radio_layout_text" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/location_radiogroup_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal" />

    <FrameLayout
        android:id="@+id/location_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@id/location_radiogroup_options"
        android:layout_below="@id/location_radiogroup_categories">

        <FrameLayout
            android:id="@+id/location_content_map_holder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <fragment
                android:id="@+id/location_content_map"
                class="com.google.android.gms.maps.MapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </FrameLayout>

        <WebView
            android:id="@+id/location_content_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

    </FrameLayout>

    <com.tealium.digitalvelocity.view.DVTextViewSemiBold
        style="@style/label_no_items"
        android:id="@+id/location_label_none"
        android:text="@string/location_label_none_text" />

    <ProgressBar
        android:id="@+id/location_activity_indicator"
        style="@android:style/Widget.Holo.Light.ProgressBar.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

</RelativeLayout>
